# Bantr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.playwright-cli/: page-2026-07-18T18-48-03-002Z.yml  page-2026-07-18T18-53-57-741Z.yml
app/api/routes/: dashboard.py  pay.py  payments.py
app/api/templates/: base.html  index.html
app/core/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  logging.py  security.py  tokens.py
app/db/: models.py  session.py
app/services/betting/: broadcaster.py  engine.py  players.py  polls.py  roster.py
app/services/nlu/: parser.py
app/services/payments/: solana_pay.py
app/services/state/: redis_store.py
app/services/telegram/: bot.py
app/services/txline/: auth.py  fixtures.py  provenance.py  stream.py
bet-escrow/: Anchor.toml
bet-escrow/programs/bet-escrow/: Cargo.toml
bet-escrow/programs/bet-escrow/src/: constants.rs  error.rs  lib.rs  state.rs
bet-escrow/programs/bet-escrow/src/instructions/: cancel.rs  initialize.rs  join.rs  mod.rs  refund.rs  resolve.rs
bet-escrow/programs/bet-escrow/tests/: test_bet_escrow.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: PaymentContent.tsx
frontend/src/pages/: Landing.tsx  Payment.tsx  Refund.tsx
skills/: readme.md
skills/robust-frontend/: SKILL.md
skills/robust-frontend/references/: animations.md  (+4 more)
skills/senior-frontend-engineer/: SKILL.md
tests/: conftest.py  test_comprehensive.py
(+5 files in other folders)
